Do not use float/double_t types for C++17 utils

On very old (i586) architectures, both types are the same.

BUG: 431436